--- a/src/main/resources/com/r4ppz/css/FinalDesign.css
+++ b/src/main/resources/com/r4ppz/css/FinalDesign.css
@@ -29,3 +29,43 @@
     -fx-background-color: rgba(0, 0, 0, 0);
 }
 
+.side-panel-vbox {
+    -fx-background-color: rgb(255, 255, 255);
+    -fx-background-radius: 5;
+    -fx-border-color: rgb(0, 0, 0);
+    -fx-border-width: 2px;
+    
+}
+
+/*! Dynamic design */
+.content-folder-button {
+    -fx-background-color: rgb(255, 255, 255);
+    -fx-background-radius: 5;
+    -fx-border-color: rgb(0, 0, 0);
+    -fx-border-radius: 5;
+    -fx-border-width: 1px;
+    -fx-padding: 10, 30, 10, 30;
+
+    -fx-min-width: 150px;
+    -fx-max-width: 150px;
+    -fx-pref-width: 150px;
+    -fx-min-height: 50px;
+    -fx-max-height: 50px;
+    -fx-pref-height: 50px;
+
+}
+
+.content-folder-button:hover {
+    -fx-background-color: rgb(255, 255, 255);
+    -fx-text-fill: #000000;
+}
+
+.content-folder-button:pressed {
+    -fx-background-color: rgb(241, 241, 241);
+    -fx-text-fill: #0033ff;
+}
+
+.content-folder-button:focused {
+    -fx-focus-color: transparent;
+    -fx-faint-focus-color: transparent;
+}
