--- a/src/main/resources/com/r4ppz/view/MainViewV2.fxml
+++ b/src/main/resources/com/r4ppz/view/MainViewV2.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -10,32 +9,34 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/FinalDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/FinalDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.r4ppz.controller.MainViewV2Controller">
    <children>
       <BorderPane layoutX="133.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" styleClass="background" stylesheets="@../css/FinalDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <left>
-            <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="182.0" styleClass="right-side-panel" stylesheets="@../css/FinalDesign.css" BorderPane.alignment="CENTER">
+            <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="182.0" stylesheets="@../css/FinalDesign.css" BorderPane.alignment="CENTER">
                <children>
-                  <HBox alignment="CENTER" prefHeight="95.0" prefWidth="318.0">
+                  <HBox alignment="CENTER" prefHeight="52.0" prefWidth="182.0">
                      <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="42.0" prefWidth="118.0" text="Archive" textAlignment="CENTER">
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="118.0" text="Archive" textAlignment="CENTER">
                            <font>
                               <Font name="Arial Bold" size="24.0" />
                            </font>
                         </Label>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER" prefHeight="74.0" prefWidth="122.0">
+                  <HBox alignment="CENTER" prefHeight="50.0" prefWidth="122.0">
                      <VBox.margin>
                         <Insets left="30.0" right="30.0" />
                      </VBox.margin>
                      <children>
-                        <Button mnemonicParsing="false">
+                        <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadButtonAction">
                            <graphic>
-                              <ImageView fitHeight="45.0" fitWidth="42.0" pickOnBounds="true" preserveRatio="true" styleClass="button">
+                              <ImageView fitHeight="31.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" styleClass="button">
                                  <image>
                                     <Image url="@../image/upload-icon.png" />
                                  </image>
@@ -44,89 +45,15 @@
                         </Button>
                      </children>
                   </HBox>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
+                  <Pane prefHeight="27.0" prefWidth="182.0" />
+                  <VBox prefHeight="244.0" prefWidth="134.0">
                      <VBox.margin>
-                        <Insets left="30.0" right="30.0" />
+                        <Insets left="10.0" right="10.0" />
                      </VBox.margin>
                      <children>
-                        <ScrollPane hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER">
+                        <ScrollPane hbarPolicy="NEVER" prefHeight="249.0" prefWidth="162.0" styleClass="background" vbarPolicy="NEVER">
                            <content>
-                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="117.0" spacing="10.0">
-                                 <children>
-                                    <Button mnemonicParsing="false" text="Folder">
-                                       <graphic>
-                                          <ImageView fitHeight="23.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../image/folder-icon.png" />
-                                             </image>
-                                             <viewport>
-                                                <Rectangle2D />
-                                             </viewport>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <Button mnemonicParsing="false" text="Folder">
-                                       <graphic>
-                                          <ImageView fitHeight="23.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../image/folder-icon.png" />
-                                             </image>
-                                             <viewport>
-                                                <Rectangle2D />
-                                             </viewport>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <Button mnemonicParsing="false" text="Folder">
-                                       <graphic>
-                                          <ImageView fitHeight="23.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../image/folder-icon.png" />
-                                             </image>
-                                             <viewport>
-                                                <Rectangle2D />
-                                             </viewport>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <Button mnemonicParsing="false" text="Folder">
-                                       <graphic>
-                                          <ImageView fitHeight="23.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../image/folder-icon.png" />
-                                             </image>
-                                             <viewport>
-                                                <Rectangle2D />
-                                             </viewport>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <Button mnemonicParsing="false" text="Folder">
-                                       <graphic>
-                                          <ImageView fitHeight="23.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../image/folder-icon.png" />
-                                             </image>
-                                             <viewport>
-                                                <Rectangle2D />
-                                             </viewport>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                    <Button mnemonicParsing="false" text="Folder">
-                                       <graphic>
-                                          <ImageView fitHeight="23.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
-                                             <image>
-                                                <Image url="@../image/folder-icon.png" />
-                                             </image>
-                                             <viewport>
-                                                <Rectangle2D />
-                                             </viewport>
-                                          </ImageView>
-                                       </graphic>
-                                    </Button>
-                                 </children>
-                              </VBox>
+                              <VBox fx:id="fileContainer" alignment="CENTER" prefHeight="240.0" prefWidth="159.0" spacing="10.0" styleClass="background" />
                            </content>
                         </ScrollPane>
                      </children>
@@ -134,6 +61,13 @@
                </children>
             </VBox>
          </left>
+         <center>
+            <AnchorPane prefHeight="400.0" prefWidth="415.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Line endX="-127.0" endY="243.0" layoutX="127.0" layoutY="147.0" startX="-127.0" startY="-147.0" />
+               </children>
+            </AnchorPane>
+         </center>
       </BorderPane>
    </children>
 </AnchorPane>
