--- a/src/main/resources/org/r4ppz/view/MainViewV2.fxml
+++ b/src/main/resources/org/r4ppz/view/MainViewV2.fxml
@@ -65,6 +65,11 @@
             <AnchorPane prefHeight="400.0" prefWidth="415.0" BorderPane.alignment="CENTER">
                <children>
                   <Line endX="-127.0" endY="243.0" layoutX="127.0" layoutY="147.0" startX="-127.0" startY="-147.0" />
+                  <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" layoutX="109.0" layoutY="109.0" prefHeight="200.0" prefWidth="297.0" vbarPolicy="NEVER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <content>
+                        <VBox prefHeight="398.0" prefWidth="378.0" />
+                     </content>
+                  </ScrollPane>
                </children>
             </AnchorPane>
          </center>
