--- a/src/main/resources/org/r4ppz/view/MainViewV2.fxml
+++ b/src/main/resources/org/r4ppz/view/MainViewV2.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/FinalDesign.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.r4ppz.controller.MainViewV2Controller">
@@ -51,7 +50,7 @@
                         <Insets left="10.0" right="10.0" />
                      </VBox.margin>
                      <children>
-                        <ScrollPane hbarPolicy="NEVER" prefHeight="249.0" prefWidth="162.0" styleClass="background" vbarPolicy="NEVER">
+                        <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" prefHeight="249.0" prefWidth="162.0" styleClass="background" vbarPolicy="NEVER">
                            <content>
                               <VBox fx:id="fileContainer" alignment="CENTER" prefHeight="240.0" prefWidth="159.0" spacing="10.0" styleClass="background" />
                            </content>
@@ -64,10 +63,12 @@
          <center>
             <AnchorPane prefHeight="400.0" prefWidth="415.0" BorderPane.alignment="CENTER">
                <children>
-                  <Line endX="-127.0" endY="243.0" layoutX="127.0" layoutY="147.0" startX="-127.0" startY="-147.0" />
                   <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" layoutX="109.0" layoutY="109.0" prefHeight="200.0" prefWidth="297.0" vbarPolicy="NEVER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <content>
-                        <VBox prefHeight="398.0" prefWidth="378.0" />
+                        <VBox prefHeight="398.0" prefWidth="378.0">
+                           <children>
+                              <ImageView fx:id="pdfImageView" fitHeight="394.0" fitWidth="416.0" pickOnBounds="true" preserveRatio="true" />
+                           </children></VBox>
                      </content>
                   </ScrollPane>
                </children>
